Step 9: Finalized Phase 1 improved coverage and mutation traceability