@@ -1,4 +1,4 @@
-﻿/* @Authors
+/* @Authors
 * Student Names: Mustafa Eren KOÇ, Onat Barış ERCAN
 * Student IDs: 150190805, 150210075
 */
@@ -31,11 +31,39 @@ class DatasetImprovedTest {
     }
 
     @Test
-    void improvedHandlesCompactAndEmptyInput() {
+    void improvedHandlesCompactAndEmptyInput_B1() {
         Solution s = new Solution();
-        Assertions.assertEquals(List.of(), s.separateParenGroups(""));
-        Assertions.assertEquals(Arrays.asList("(()())"), s.separateParenGroups("(()())"));
+        Assertions.assertEquals(List.of(), s.separateParenGroups(""),
+                "Boundary B1a: empty input yields no groups and skips the loop");
+        Assertions.assertEquals(List.of(), s.separateParenGroups("   "),
+                "Boundary B1b: whitespace-only input skips all characters and yields no groups");
+    }
+
+    @Test
+    void improvedAdjacentGroupsSeparatedByDepth_B2() {
+        Solution s = new Solution();
+        Assertions.assertEquals(
+                Arrays.asList("()", "()", "()"),
+                s.separateParenGroups("()()()"),
+                "Boundary B2: group separation depends on nesting depth, not spaces");
+    }
+
+    @Test
+    void improvedNestedGroupRetainedAsOne_V3() {
+        Solution s = new Solution();
+        Assertions.assertEquals(
+                Arrays.asList("((()))"),
+                s.separateParenGroups("((()))"),
+                "Valid class V3: nested groups remain a single entry until balance returns to zero");
+    }
+
+    @Test
+    void improvedMutationNonParenthesisTokensAreIgnored_I2() {
+        Solution s = new Solution();
+        // DeepSeek's else-if chain silently ignores any character that is neither '(' nor ')'.
+        Assertions.assertEquals(
+                Arrays.asList("()", "(())"),
+                s.separateParenGroups("() abc (())"),
+                "Invalid class I2 (mutation): non-parenthesis tokens are skipped without contributing to any group");
     }
 }
-
-
