@@ -1,4 +1,4 @@
-﻿/* @Authors
+/* @Authors
 * Student Names: Mustafa Eren KOÇ, Onat Barış ERCAN
 * Student IDs: 150190805, 150210075
 */
@@ -31,11 +31,39 @@ class DatasetImprovedTest {
     }
 
     @Test
-    void improvedHandlesCompactAndEmptyInput() {
+    void improvedHandlesCompactAndEmptyInput_B1() {
         Solution s = new Solution();
-        Assertions.assertEquals(List.of(), s.separateParenGroups(""));
-        Assertions.assertEquals(Arrays.asList("(()())"), s.separateParenGroups("(()())"));
+        Assertions.assertEquals(List.of(), s.separateParenGroups(""),
+                "Boundary B1a: empty input yields no groups and skips the loop");
+        Assertions.assertEquals(List.of(), s.separateParenGroups("   "),
+                "Boundary B1b: whitespace-only input filters every character and yields no groups");
+    }
+
+    @Test
+    void improvedAdjacentGroupsSeparatedByDepth_B2() {
+        Solution s = new Solution();
+        Assertions.assertEquals(
+                Arrays.asList("()", "()", "()"),
+                s.separateParenGroups("()()()"),
+                "Boundary B2: group separation depends on nesting depth, not spaces");
+    }
+
+    @Test
+    void improvedNestedGroupRetainedAsOne_V3() {
+        Solution s = new Solution();
+        Assertions.assertEquals(
+                Arrays.asList("((()))"),
+                s.separateParenGroups("((()))"),
+                "Valid class V3: nested groups remain a single entry until balance returns to zero");
+    }
+
+    @Test
+    void improvedMutationUnbalancedInputYieldsPartialOutput_I1() {
+        Solution s = new Solution();
+        // Qwen's loop never emits a trailing unbalanced remainder because the final balance != 0.
+        Assertions.assertEquals(
+                List.of(),
+                s.separateParenGroups("(()"),
+                "Invalid class I1 (mutation): unbalanced input leaves the current group buffered and un-emitted");
     }
 }
-
-
